zeit.content.article changes
============================

3.0.9 (unreleased)
------------------

- Support rel="nofollow" for links in the article body (VIV-104).

- Display ``breadcrumb_title`` field (VIV-105).

- Handle inserting links across tags (#12558).

- Display proper name for "last published by" status.

- Add genre to XML references (WEB-35)


3.0.8 (2013-08-27)
------------------

- Add "genre" field for articles (#12725).

- Display "Mobile URL" field (#12749).

- Display overlay with edit button for images in repository mode, too (#12707).


3.0.7 (2013-08-14)
------------------

- Update to Python-2.7 and ZTK-1.1.5 (#11005).


3.0.6 (2013-07-11)
------------------

- Make keywords optional for the time being.


3.0.5 (2013-07-10)
------------------

- Require at least three keywords, not just one.


3.0.4 (2013-07-08)
------------------

- Include timezone when rendering last published date.

- Prevent editor from saving when nothing has changed to make UI more
  responsive. (#12555)


3.0.3 (2013-07-01)
------------------

- Display last_semantic_change with the user's timezone (#12396).

- Decouple character limit during entry of text from validation during
  check-in of article (#12462).

- Prevent accidental back button events when pressing backspace (#12461).

- Check if link in link editor has protocol, else add http. (#12557)


3.0.2 (2013-05-29)
------------------

- Newly created articles now have a last_semantic_change value set (#12398).


3.0.1 (2013-05-16)
------------------

- Remove obsolete content-editable workaround. This prevents text from being
  deleted accidentally after pasting (#12385).


3.0 (2013-04-23)
----------------

- Support advertorial hack and print byline (#11973, #12246)

- Support colorbox links (#11981)

- RAW-Block uses HTML parser and converts given HTML to XML now (#12267).

- Accomodated article to cope for the changed videos: videos are now full CMS
  objects and moved to zeit.content.video (for #8996)
