@@ -1,5 +1,5 @@
 import sys
-import unittest2 as unittest
+import unittest
 import zeit.content.article.edit.browser.testing
 
 
